@@ -25,6 +25,11 @@ for line in lines:
     if (m):
         name = m.group(1)
 
+    # in case the test program crashes before the "--- Running" message
+    m = re.match(r'^[0-9]+ words read from (.*)\.ihx$',line)
+    if (m):
+        name = m.group(1)
+
     # '--- Summary: f/t/c: ...', where f = # failures, t = # test points,
     # c = # test cases.
     if (re.search(r'^--- Summary:', line)):
